Added loggers and made code work in Java 8